--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,18 @@ header .header_box .green_box {
     height: 1080px;
     background-color: #27483E;
 }
+header .header_box .green_box li {
+    position: absolute;
+    left: 78px;
+    top: 767px;
+    color: #fff;
+    font-size: 64px;
+}
+header .header_box .green_box li p {
+    color: #fff;
+    font-size: 20px;
+    padding-top: 26px;
+}
 header .header_box .main_img {
     position: absolute;
     left: 127px;
