--- a/css/style.css
+++ b/css/style.css
@@ -94,12 +94,10 @@ header .header_box ul.gnb>li:hover>a {
     text-decoration-color: #9BA695;
 }
 header .header_box .green_box {
-    position: absolute;
-    left: 1005px;
-    top: 0;
     width: 915px;
     height: 1080px;
-    background-color: #27483E;
+    background-color: rgba(39, 72, 62, 0.9);
+    position: relative;
 }
 header .header_box .green_box .leaf_img {
     position: absolute;
@@ -108,27 +106,132 @@ header .header_box .green_box .leaf_img {
 }
 header .header_box .green_box li {
     position: absolute;
-    left: 324px;
-    top: 826px;
+    left: 184px;
+    top: 367px;
     color: #fff;
-    font-size: 64px;
+    font-size: 80px;
 }
 header .header_box .green_box p {
     position: absolute;
-    left: 194px;
-    top: 930px;
-    text-align: center;
-    line-height: 20px;
+    left: 184px;
+    top: 483px;
     color: #fff;
     font-size: 20px;
     padding-top: 20px;
 }
+header .header_box .process_btn {
+    position: absolute;
+    left: 184px;
+    top: 600px;
+    width: 140px;
+    height: 42px;
+    text-align: center;
+    font-size: 16px;
+    line-height: 42px;
+    color: #fff;
+    background: rgba(171, 190, 162, 0.6);
+    border: 2px solid transparent; 
+    -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+    transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+}
+header .header_box .process_btn:hover::before {
+    width: 100%;
+}
+header .header_box .process_btn::before {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    content: '';
+    width: 0%;
+    height: 1px;
+    background: #fff;
+    box-shadow: inset 0px 0px 0px #fff;
+    transition: all 0.4s;
+}
+header .header_box .process_btn:hover::after {
+    width: 100%;
+}
+header .header_box .process_btn::after {
+    display: block;
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 0%;
+    height: 1px;
+    background: #fff;
+    -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+    transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+}
+header .header_box .process_btn:hover {
+    border-left: 1px solid #fff;
+    border-right: 1px solid #fff;
+}
+
+header .header_box .port_btn {
+    position: absolute;
+    left: 374px;
+    top: 600px;
+    width: 140px;
+    height: 42px;
+    text-align: center;
+    font-size: 16px;
+    line-height: 42px;
+    color: #fff;
+    /* background: rgba(39, 72, 62, 0.9); */
+    background: #203C33;
+    border: 2px solid transparent; 
+    -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+    transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+}
+header .header_box .port_btn:hover::before {
+    width: 100%;
+}
+header .header_box .port_btn::before {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    content: '';
+    width: 0%;
+    height: 1px;
+    background: #fff;
+    box-shadow: inset 0px 0px 0px #fff;
+    transition: all 0.4s;
+}
+header .header_box .port_btn:hover::after {
+    width: 100%;
+}
+header .header_box .port_btn::after {
+    display: block;
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 0%;
+    height: 1px;
+    background: #fff;
+    -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+    transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+}
+header .header_box .port_btn:hover {
+    border-left: 1px solid #fff;
+    border-right: 1px solid #fff;
+}
+header .header_box .barcode_txt {
+    position: absolute;
+    left: 700px;
+    top: 1000px;
+}
+header .header_box .barcode_txt li {
+    font-size: 64px;
+    font-weight: medium;
+    font-family: 'Libre Barcode 128 Text', cursive;
+    color: #fff;
+}
 header .header_box .main_img {
     position: absolute;
-    left: 127px;
-    top: 65px;
-}
-header .header_box .main_img img {
-    width: 700px;
-    height: 950px;
+    left: 915px;
+    top: 0;
 }
